@@ -1,3 +1,9 @@
+TAG: mcvload-4-4-0-6
+DATE: 07/29/2010
+STAFF: sc
+CHANGES:
+1) mcvQC.py -  term note now has marker type AND Judy comments
+
 TAG: mcvload-4-4-0-5
 TAG: mcvload-4-4-0-4
 DATE: 07/22/2010
